--- a/code/BuildingGadgets/BuildingGadgets.csproj
+++ b/code/BuildingGadgets/BuildingGadgets.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+    <Version>1.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
@@ -31,5 +32,9 @@
       <Private>False</Private>
     </Reference>
   </ItemGroup>
+
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="copy $(TargetDir)*.* C:\_Programming\Vintage\BuildingGadgets\mod" />
+  </Target>
 
 </Project>
